# liberte

./: Dockerfile  README-Phase2.md  README.md  README_PHASE1.md  docker-compose.yml  phase1_healthcheck.ps1  prometheus.yml  pyproject.toml  structure.txt
config/: collector.yaml  execution.yaml  scanner.yaml  score_engine.yaml
db_data/: postmaster.pid
db_data/base/1/: 2619  2840
db_data/base/16384/: 1247  1249  1249_fsm  1259  16388  16396  16399  16407  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
db_data/global/: 1260  1262  pg_control  pg_internal.init
postgres-data/base/1/: 2619  2696  2840  2841  pg_internal.init
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
scripts/: apply_phase1_schema.py  create_topics.py  create_topics_phase1.py  create_topics_phase2.py  dummy_ws_server.py  test_db_connection.py
sql/: phase1.sql  phase2.sql
src/collector/: collector.py
src/collector.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/execution/: execution_stub.py
src/scanner/: scanner.py
src/score_engine/: __init__.py  db.py  metrics.py  roi_analyzer.py  score_engine.py
tests/: test_integration_phase2.py  test_roi_metrics.py  test_score_formula.py
